	  - Giantslayer is now a sling that gives 18/** STR while wielded or
	    in the alternate weapon slot.
	  - Werebane conveys polymorph control while wielded.
	  - Ogresmasher gives 25 CON while wielded.
	  - Trollsbane prevents trolls from leaving corpses while wielded.
	* Player can wish for up to 100 projectiles (from UnNetHackPlus)
	* Land mines and beartraps weigh less (from UnNetHackPlus)

	* New config option for customizing monster letter in UTF8graphics:
	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke

	* removed monsters:
	  - anti-matter vortex

	* Livelog: report bag of holding explosions

	* New role: Convict class

	* new monsters:
	  - locusts (from SporkHack)
	  - weeping angels
	  - weeping archangels
	  - deep orcs

	* dungeon layout:
	  - length of Town branch reduced and special filler level added
	  - new branch: The Ruins of Moria

	* Options:
	  - default of sortloot changed to 'loot'
	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination option: perma_hallu
	  - New option: wound_message. Healers can recieve Crawl-style damage
	    messages indicating the current health of their foes

	* Role differentiation:
	  - Tourists get automatic typ identification for shop items
	  - Healers can see how wounded monsters are (by L)
	  - Knights get a weight bonus for body armor heavier than
	      studded leather armor

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines
	  - New paranoid options: paranoid_lava and paranoid_water, asks for
	      confirmation before walking into known lava and water squares
	  - Automatically ask whether to unlock when #looting a locked container
	      and carrying an unlocking tool (from UnNetHackPlus)